Add already stuff written before switching to LaTeX

--- a/proposal.tex
+++ b/proposal.tex
@@ -389,18 +389,8 @@ The abstract goes here.
 
 
 
-\section{Introduction}
-% no \IEEEPARstart
-This demo file is intended to serve as a ``starter file''
-for IEEE conference papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
-
-\hfill mds
- 
-\hfill August 26, 2015
+\section{Problem Description (From Preliminary Project)}
+With Internet technologies that are common in today’s society, social media platforms have become a widely-used communication medium. Included in this communication is information regarding natural disasters as they unfold. However, this data are often too large or noisy for real-time analysis by humans. Previous works have produced methods of filtering out content relevant to emergencies and detecting emergencies \cite{Avvenuti}. This work will seek to use locations mentioned in social media posts in order to identify the most heavily affected areas of a natural disaster regions in order to aid in the allocation of emergency response resources. This will require processing content in order to find the portions that identify locations as well as associating these mentioned locations with map coordinates. Twitter will be used as the source of social media data. The analysis will include text of the tweets and provided metadata. Multimedia elements such as images and videos will not be considered. The types of disasters to analyze have not yet been determined. This is because the study will be forced to rely on sample data from past disasters, and data availability has not yet been explored.
 
 \subsection{Subsection Heading Here}
 Subsection text here.
@@ -507,8 +497,9 @@ Subsubsection text here.
 
 
 
-\section{Conclusion}
-The conclusion goes here.
+\section{Facilities and Special Resources}
+\subsection{Computing Resources}
+Due to the nature of social media as a data source, computing resources will be required. 
 
 
 
