Add Facilities and Special Resources Section

--- a/proposal.tex
+++ b/proposal.tex
@@ -499,7 +499,11 @@ Subsubsection text here.
 
 \section{Facilities and Special Resources}
 \subsection{Computing Resources}
-Due to the nature of social media as a data source, computing resources will be required. 
+Due to the nature of social media as a data source, computing resources will be required. As an example, the data for a single object (tweet) of Twitter data occupies around 4KB including metadata \cite{Imran}. If the dataset corresponding to a crisis contains millions of objects, gigabytes of space will be needed for storing it. Processing of incoming data must also be considered. The rate of data production varies greatly, and peaks in data velocity need to be handled. One of the largest known peaks on Twitter came in 2012 during Hurricane Sandy with data being produced at a rate of 16,000 tweets per minute \cite{Imran}. 
+
+The computing power for this project will be obtained from a cloud computing service such as Amazon Web Services. This choice is made in order to take advantage of the scalability and maintenance advantages of cloud computing. Using cloud computing services is expected to be more cost effective than purchasing hardware due to the ability to increase or decrease the amount of resources at any time. 
+
+\subsection{Privacy Concerns}
 
 
 
