Fix grammar and add references

--- a/references.bib
+++ b/references.bib
@@ -93,6 +93,54 @@ ACM
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	keywords = {Social media, crisis computing, disaster management, mass emergencies},
+}
+
+IEEE
+@INPROCEEDINGS{Pohl, 
+	author={D. Pohl and A. Bouchachia and H. Hellwagner}, 
+	booktitle={Machine Learning and Applications (ICMLA), 2012 11th International Conference on}, 
+	title={Automatic Identification of Crisis-Related Sub-events Using Clustering}, 
+	year={2012}, 
+	volume={2}, 
+	pages={333-338}, 
+	keywords={emergency management;natural language processing;pattern clustering;social networking (online);Flickr;YouTube;after-the-fact analysis;automatic crisis-related subevent identification;crisis management;crisis-related subevent detection;decision making;geo-referenced data;mobile device;natural language description;social media;social network;two-phase clustering approach;Cities and towns;Clustering algorithms;Crisis management;Data visualization;Media;Twitter;Videos;Clustering;Crisis Management;Sub-Event Detection}, 
+	doi={10.1109/ICMLA.2012.170}, 
+	month={Dec},} 
+
+ACM
+@inproceedings{Khurdiya,
+	author = {Khurdiya, Arpit and Dey, Lipika and Mahajan, Diwakar and Verma, Ishan},
+	title = {Extraction and Compilation of Events and Sub-events from Twitter},
+	booktitle = {Proceedings of the The 2012 IEEE/WIC/ACM International Joint Conferences on Web Intelligence and Intelligent Agent Technology - Volume 01},
+	series = {WI-IAT '12},
+	year = {2012},
+	isbn = {978-0-7695-4880-7},
+	pages = {504--508},
+	numpages = {5},
+	url = {http://dl.acm.org/citation.cfm?id=2457524.2457638},
+	acmid = {2457638},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+	keywords = {Social Media, Conditional Random Fields, Event Extraction, Entity Resolution},
+} 
+
+ACM
+@inproceedings{Hua,
+	author = {Hua, Ting and Chen, Feng and Zhao, Liang and Lu, Chang-Tien and Ramakrishnan, Naren},
+	title = {STED: Semi-supervised Targeted-interest Event Detectionin in Twitter},
+	booktitle = {Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+	series = {KDD '13},
+	year = {2013},
+	isbn = {978-1-4503-2174-7},
+	location = {Chicago, Illinois, USA},
+	pages = {1466--1469},
+	numpages = {4},
+	url = {http://doi.acm.org/10.1145/2487575.2487712},
+	doi = {10.1145/2487575.2487712},
+	acmid = {2487712},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {event detection, text mining},
 } 
 
 Google Researchgate
