--- a/proposal.tex
+++ b/proposal.tex
@@ -390,7 +390,7 @@ The abstract goes here.
 
 
 \section{Problem Description (From Preliminary Project)}
-With Internet technologies that are common in today’s society, social media platforms have become a widely-used communication medium. Included in this communication is information regarding natural disasters as they unfold. However, this data are often too large or noisy for real-time analysis by humans. Previous works have produced methods of filtering out content relevant to emergencies and detecting emergencies \cite{Avvenuti}. This work will seek to use locations mentioned in social media posts in order to identify the most heavily affected areas of a natural disaster regions in order to aid in the allocation of emergency response resources. This will require processing content in order to find the portions that identify locations as well as associating these mentioned locations with map coordinates. Twitter will be used as the source of social media data. The analysis will include text of the tweets and provided metadata. Multimedia elements such as images and videos will not be considered. The types of disasters to analyze have not yet been determined. This is because the study will be forced to rely on sample data from past disasters, and data availability has not yet been explored.
+With Internet technologies that are common in today’s society, social media platforms have become a widely-used communication medium. Included in this communication is information regarding natural disasters as they unfold. However, these data are often too large or noisy for real-time analysis by humans. Previous works have produced methods of filtering out content relevant to emergencies and detecting emergencies \cite{Avvenuti}. This work will seek to use locations mentioned in social media posts in order to identify the most heavily affected areas of a natural disaster regions in order to aid in the allocation of emergency response resources. This will require processing content in order to find the portions that identify locations as well as associating these mentioned locations with map coordinates. Twitter will be used as the source of social media data. The analysis will include text of the tweets and provided metadata. Multimedia elements such as images and videos will not be considered. The types of disasters to analyze have not yet been determined. This is because the study will be forced to rely on sample data from past disasters, and data availability has not yet been explored.
 
 \subsection{Subsection Heading Here}
 Subsection text here.
