Research Objective Headings

--- a/proposal.tex
+++ b/proposal.tex
@@ -392,9 +392,11 @@ The abstract goes here.
 With Internet technologies that are common in today’s society, social media platforms have become a widely-used communication medium. Included in this communication is information regarding natural disasters as they unfold. However, these data are often too large or noisy for real-time analysis by humans. Previous works have produced methods of filtering out content relevant to emergencies and detecting emergencies \cite{Avvenuti}. Other works have proposed methods breaking down large events into smaller subevents associated geographic information in some cases \cite{Pohl,Khurdiya,Hua}. This work will seek to determine criteria for prioritization of the subevents in order to aid in the allocation of emergency response resources.  Since this research will depend on external sources for event and subevent detection, the social media platforms for analysis cannot be predetermined. The platforms will be limited to those for which event and subevent detection is available. The analysis in this wook will include text content and provided metadata. Multimedia elements such as images and videos will not be considered. The types of disasters to analyze have not yet been determined. This is because the study will be forced to rely on sample data from past disasters in an ex post facto fashion, and data availability has not yet been explored.
 
 \section{Research Objectives}
-\subsection{Get Event/Subevent Detection}
-\subsection{Get Data}
-\subsection{Get Training Set}
+\subsection{Event and Subevent Detection}
+\subsection{Dataset Procurement}
+\subsection{Survey Emergency Management Officials}
+\subsection{Prioritization Method Development}
+\subsection{Prioritization Method Testing}
 \subsection{Subsection Heading Here}
 Subsection text here.
 
@@ -546,6 +548,7 @@ The authors would like to thank...
 
 /begin{comment}
 Unincorporated Thoughts
+"determine criteria"
 Does disaster relief use the data already
 Does this imply that tech savvy people will get more aid. what about groups that don't commonly use social media
 Why we don't like top 5 by cluster distance in Pohl
