--- a/proposal.tex
+++ b/proposal.tex
@@ -403,6 +403,7 @@ A new module will be added to the system for identifying events and subevents wh
 
 \section{Literature Review}
 \section{Importance/Benefits of the Study}
+Research on processing social media data for emergency management should be conducted in order to enable officials to use this data. Emergency responders have expressed interest in taking advantage of social media as a data source, but have been largely unable to do so due to the nature of the data.
 
 
 % An example of a floating figure using the graphicx package.
