--- a/references.bib
+++ b/references.bib
@@ -168,3 +168,30 @@ Google Researchgate
 	keywords = "Text mining",
 	keywords = "Content analysis "
 }
+
+@Inbook{Vieweg2014,
+	author="Vieweg, Sarah
+	and Castillo, Carlos
+	and Imran, Muhammad",
+	editor="Aiello, Luca Maria
+	and McFarland, Daniel",
+	title="Integrating Social Media Communications into the Rapid Assessment of Sudden Onset Disasters",
+	bookTitle="Social Informatics: 6th International Conference, SocInfo 2014, Barcelona, Spain, November 11-13, 2014. Proceedings",
+	year="2014",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="444--461",
+	isbn="978-3-319-13734-6",
+	doi="10.1007/978-3-319-13734-6_32",
+	url="http://dx.doi.org/10.1007/978-3-319-13734-6_32"
+}
+
+@techreport{Bruce,	
+	author="Lindsay,Bruce R.",	
+	year="2011",	
+	title="Social Media and Disasters: Current Uses, Future Options, and Policy Considerations",	
+	institution="Library of Congress. Congressional Research Service",	
+	abstract="This report summarizes how social media have been used by emergency management officials and agencies. It also examines the potential benefits, as well as the implications, of using social media in the context of emergencies and disasters.",	
+	keywords="Telecommunication; Communications; Mass media",	
+	language="English"	
+}
