Full Draft of Importance/benefits

--- a/proposal.tex
+++ b/proposal.tex
@@ -405,6 +405,9 @@ A new module will be added to the system for identifying events and subevents wh
 \section{Importance/Benefits of the Study}
 Research on processing social media data for emergency management should be conducted in order to enable officials to use this data. Emergency responders have expressed interest in taking advantage of social media as a data source, but have been largely unable to do so due to the nature of the data.
 
+As an example, the United Nations Office for the Coordination of Humanitarian Affairs (OCHA), which is responsible for managing United Nations disaster response efforts, has shown interest in using social media as a source of disaster information. As investigated in \cite{vieweg2014}, OCHA included Twitter as a source of information when making assessments during Typhoon Yolanda which impacted the Philippines in November of 2013. The tweets obtained were read and labeled by human volunteers. These people were able to process 3,678 tweets; searches performed by \cite{vieweg2014} found 2,302,569 tweets related to the Typhoon Yolanda situation were available at the time of the manual analysis. In interviews regarding twitter data related to Typhoon Yolanda, \cite{vieweg2014} found that OCHA officials felt that twitter data provided little return for the sizable time investment.
+
+This research will contribute to the goal of providing emergency management agencies, such as OCHA, concise and usable reports from social media sources in a timely manner during emergency situations.
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
@@ -550,7 +553,7 @@ The authors would like to thank...
 /begin{comment}
 Unincorporated Thoughts
 Does disaster relief use the data already
-Does this imply that tech savvy people will get more aid. what about groups that don't commonly use social media
+*1 Does this imply that tech savvy people will get more aid. what about groups that don't commonly use social media
 Why we don't like top 5 by cluster distance in Pohl
 Define event & subevent
 assume detection of event and subevent is given
@@ -560,4 +563,5 @@ simulate volatility of data velocity
 do I like the bit about types of disasters in problem description
 External validity maybe the survey
 In special resources ask for a specialist to do the surveying! or design questions
+It is a source not THE source to go with *1
 /end{comment}
