--- a/references.bib
+++ b/references.bib
@@ -122,8 +122,16 @@ ACM
 	publisher = {IEEE Computer Society},
 	address = {Washington, DC, USA},
 	keywords = {Social Media, Conditional Random Fields, Event Extraction, Entity Resolution},
-} 
+}
 
+@inproceedings{vieweg2014,
+	title={Integrating social media communications into the rapid assessment of sudden onset disasters},
+	author={Vieweg, Sarah and Castillo, Carlos and Imran, Muhammad},
+	booktitle={International Conference on Social Informatics},
+	pages={444--461},
+	year={2014},
+	organization={Springer}
+}
 ACM
 @inproceedings{Hua,
 	author = {Hua, Ting and Chen, Feng and Zhao, Liang and Lu, Chang-Tien and Ramakrishnan, Naren},
@@ -169,22 +177,7 @@ Google Researchgate
 	keywords = "Content analysis "
 }
 
-@Inbook{Vieweg2014,
-	author="Vieweg, Sarah
-	and Castillo, Carlos
-	and Imran, Muhammad",
-	editor="Aiello, Luca Maria
-	and McFarland, Daniel",
-	title="Integrating Social Media Communications into the Rapid Assessment of Sudden Onset Disasters",
-	bookTitle="Social Informatics: 6th International Conference, SocInfo 2014, Barcelona, Spain, November 11-13, 2014. Proceedings",
-	year="2014",
-	publisher="Springer International Publishing",
-	address="Cham",
-	pages="444--461",
-	isbn="978-3-319-13734-6",
-	doi="10.1007/978-3-319-13734-6_32",
-	url="http://dx.doi.org/10.1007/978-3-319-13734-6_32"
-}
+
 
 @techreport{Bruce,	
 	author="Lindsay,Bruce R.",	
