Remove subheads from facilities and special resources

--- a/proposal.tex
+++ b/proposal.tex
@@ -507,12 +507,10 @@ This research will contribute to the goal of providing emergency management agen
 
 
 \section{Facilities and Special Resources}
-\subsection{Computing Resources}
 Due to the nature of social media as a data source, computing resources will be required. As an example, the data for a single object (tweet) of Twitter data occupies around 4KB including metadata \cite{Imran}. If the dataset corresponding to a crisis contains millions of objects, gigabytes of space will be needed for storing it. Processing of incoming data must also be considered. The rate of data production varies greatly, and peaks in data velocity need to be handled. One of the largest known peaks on Twitter came in 2012 during Hurricane Sandy with data being produced at a rate of 16,000 tweets per minute \cite{Imran}. Although this research will be conducted in a ex post facto format, the volatility of incoming data velocity will be simulated.
 
 The computing solution for this research needs to be able to accommodate the volume and velocity of  social media data. The data will need to be received from the source, processed, and stored in real time. 
 
-\subsection{Privacy Concerns}
 
 
 
@@ -564,4 +562,5 @@ do I like the bit about types of disasters in problem description
 External validity maybe the survey
 In special resources ask for a specialist to do the surveying! or design questions
 It is a source not THE source to go with *1
+why we don't need IRB in research design
 /end{comment}
