--- a/proposal.tex
+++ b/proposal.tex
@@ -389,7 +389,10 @@ The abstract goes here.
 
 
 \section{Problem Description}
-With Internet technologies that are common in today’s society, social media platforms have become a widely-used communication medium. Included in this communication is information regarding natural disasters as they unfold. However, these data are often too large or noisy for real-time analysis by humans. Previous works have produced methods of filtering out content relevant to emergencies and detecting emergencies \cite{Avvenuti}. Other works have proposed methods breaking down large events into smaller subevents associated geographic information in some cases \cite{Pohl,Khurdiya,Hua}. This work will seek to develop a method for prioritization of the subevents in order to aid in the allocation of emergency response resources.  Since this research will depend on external sources for event and subevent detection, the social media platforms for analysis cannot be predetermined. The platforms will be limited to those for which event and subevent detection is available. The analysis in this wook will include text content and provided metadata. Multimedia elements such as images and videos will not be considered. The types of disasters to analyze have not yet been determined. This is because the study will be forced to rely on sample data from past disasters in an ex post facto fashion, and data availability has not yet been explored.
+With Internet technologies that are common in today’s society, social media platforms have become a widely-used communication medium. Included in this communication is information regarding natural disasters as they unfold. However, these data are often too large or noisy for real-time analysis by humans. Previous works have produced methods of filtering out content relevant to emergencies and detecting emergencies \cite{Avvenuti}. Other works have proposed methods breaking down large events into smaller subevents associated geographic information in some cases \cite{Pohl,Khurdiya,Hua}. 
+
+This work will seek to evaluate and compare selected supervised learning algorithms for organizing detected subevents according to priority as determined by emergency responders. Since this research will depend on external sources for event and subevent detection, the social media platforms for analysis cannot be predetermined. The platforms will be limited to those for which event and subevent detection is available. The types of disasters for analysis have not been determined and will be limited by the properties of the event and subevent detection that is used.
+
 
 \section{Research Objectives}
 \subsection{Event and Subevent Detection}
