Finish redo for compare

--- a/proposal.tex
+++ b/proposal.tex
@@ -408,9 +408,9 @@ In order to compare the algorithms, the data obtained from the survey of emergen
 
 \section{Literature Review}
 \section{Importance/Benefits of the Study}
-Research on processing social media data for emergency management should be conducted in order to enable officials to use this data. Emergency responders have expressed interest in taking advantage of social media as a data source, but have been largely unable to do so due to the nature of the data.
+Research on processing social media data for emergency management should be conducted in order to enable officials to use this data during disaster situations. Emergency responders have expressed interest in taking advantage of social media as a data source, but have been largely unable to do so due to the nature of the data.
 
-As an example, the United Nations Office for the Coordination of Humanitarian Affairs (OCHA), which is responsible for managing United Nations disaster response efforts, has shown interest in using social media as a source of disaster information. As investigated in \cite{vieweg2014}, OCHA included Twitter as a source of information when making assessments during Typhoon Yolanda which impacted the Philippines in November of 2013. The tweets obtained were read and labeled by human volunteers. These people were able to process 3,678 tweets; searches performed by \cite{vieweg2014} found 2,302,569 tweets related to the Typhoon Yolanda situation were available at the time of the manual analysis. In interviews regarding twitter data related to Typhoon Yolanda, \cite{vieweg2014} found that OCHA officials felt that twitter data provided little return for the sizable time investment.
+As an example, the United Nations Office for the Coordination of Humanitarian Affairs (OCHA), which is responsible for managing United Nations disaster response efforts, has shown interest in using social media as a source of disaster information. As investigated in \cite{vieweg2014}, OCHA included Twitter as a source of information when making assessments during Typhoon Yolanda which impacted the Philippines in November of 2013. The tweets obtained were read and labeled by human volunteers. These people were able to process 3,678 tweets; searches performed by \cite{vieweg2014} found 2,302,569 tweets related to the Typhoon Yolanda situation were available at the time of the manual analysis. In interviews regarding twitter data related to Typhoon Yolanda, \cite{vieweg2014} found that OCHA officials felt that twitter data provided little return for the time investment which they felt was too large.
 
 This research will contribute to the goal of providing emergency management agencies, such as OCHA, concise and usable reports from social media sources in a timely manner during emergency situations.
 
@@ -512,9 +512,9 @@ This research will contribute to the goal of providing emergency management agen
 
 
 \section{Facilities and Special Resources}
-Due to the nature of social media as a data source, computing resources will be required. As an example, the data for a single object (tweet) of Twitter data occupies around 4KB including metadata \cite{Imran}. If the dataset corresponding to a crisis contains millions of objects, gigabytes of space will be needed for storing it. Processing of incoming data must also be considered. The rate of data production varies greatly, and peaks in data velocity need to be handled. One of the largest known peaks on Twitter came in 2012 during Hurricane Sandy with data being produced at a rate of 16,000 tweets per minute \cite{Imran}. Although this research will be conducted in a ex post facto format, the volatility of incoming data velocity will be simulated.
+Hardware capacity is required for storing datasets. Using Twitter as an example, a single data object occupies around 4KB including metadata \cite{Imran}. One dataset investigated in \cite{vieweg2014} contained millions of data objects. The processing resources need to be powerful enough to run the algorithms for event and subevent detection as well as the selected supervised learning algorithms in the allotted time.
 
-The computing solution for this research needs to be able to accommodate the volume and velocity of  social media data. The data will need to be received from the source, processed, and stored in real time. 
+Since this study does not seek to create any algorithms, implementations of the selected supervised learning algorithms will be required.
 
 
 
