--- a/references.bib
+++ b/references.bib
@@ -188,3 +188,69 @@ Google Researchgate
 	keywords="Telecommunication; Communications; Mass media",	
 	language="English"	
 }
+
+@article{hughes2009twitter,
+	title={Twitter adoption and use in mass convergence and emergency events},
+	author={Hughes, Amanda Lee and Palen, Leysia},
+	journal={International Journal of Emergency Management},
+	volume={6},
+	number={3-4},
+	pages={248--260},
+	year={2009},
+	publisher={Inderscience Publishers}
+}
+
+@inproceedings{dou,
+	title={Leadline: Interactive visual analysis of text data through event identification and exploration},
+	author={Dou, Wenwen and Wang, Xiaoyu and Skau, Drew and Ribarsky, William and Zhou, Michelle X},
+	booktitle={Visual Analytics Science and Technology (VAST), 2012 IEEE Conference on},
+	pages={93--102},
+	year={2012},
+	organization={IEEE}
+}
+
+@inproceedings{robinson,
+	title={A sensitive twitter earthquake detector},
+	author={Robinson, Bella and Power, Robert and Cameron, Mark},
+	booktitle={Proceedings of the 22nd International Conference on World Wide Web},
+	pages={999--1002},
+	year={2013},
+	organization={ACM}
+}
+
+@inproceedings{marcus2011twitinfo,
+	title={Twitinfo: aggregating and visualizing microblogs for event exploration},
+	author={Marcus, Adam and Bernstein, Michael S and Badar, Osama and Karger, David R and Madden, Samuel and Miller, Robert C},
+	booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+	pages={227--236},
+	year={2011},
+	organization={ACM}
+}
+
+@article{becker2011beyond,
+	title={Beyond Trending Topics: Real-World Event Identification on Twitter.},
+	author={Becker, Hila and Naaman, Mor and Gravano, Luis},
+	journal={ICWSM},
+	volume={11},
+	pages={438--441},
+	year={2011}
+}
+
+@INPROCEEDINGS{Corley, 
+	author={C. D. Corley and C. Dowling and S. J. Rose and T. McKenzie}, 
+	booktitle={2013 IEEE International Conference on Intelligence and Security Informatics}, 
+	title={SociAL Sensor Analytics: Measuring phenomenology at scale}, 
+	year={2013}, 
+	pages={61-66}, 
+	keywords={pattern classification;pattern clustering;social networking (online);strategic planning;time series;computational methods;conceptual framework;events characterization;immense social media streams;sensor network;social media interpretation;social media posts;social sensor analytics;strategic planning;tactical planning;time series models;topic characterization;topic clustering algorithm;Correlation;Indexes;Measurement;Media;Noise;Standards;Twitter}, 
+	doi={10.1109/ISI.2013.6578787}, 
+	month={June},}
+
+@article{weng,
+	title={Event Detection in Twitter.},
+	author={Weng, Jianshu and Lee, Bu-Sung},
+	journal={ICWSM},
+	volume={11},
+	pages={401--408},
+	year={2011}
+}
